opam-version: "1.2.2"
version: "0.1"
maintainer: "alin.popa@gmail.com"
authors: ["Alin Popa"]
homepage: "https://github.com/alinpopa/showmeyourpipes"
bug-reports: "https://github.com/alinpopa/showmeyourpipes/issues"
dev-repo: "https://github.com/alinpopa/showmeyourpipes.git"
license: "LGPL-3 with OCaml linking exception"
build: [
  ["jbuilder" "build" "--only" "showmeyourpipes" "--root" "." "-j" jobs "@install"]
]
depends: [
  "core"
  "cmdliner"
  "async"
]
